Minor CSS fix if genre name is too long

--- a/src/public/styles/album/album-list.css
+++ b/src/public/styles/album/album-list.css
@@ -63,6 +63,11 @@
 
 .album-dategenre p {
     color: var(--white);
+    font-size: 0.8rem;
+}
+
+.album-dategenre .genre {
+    text-align: right;
 }
 
 .pagination {
