--- a/src/public/styles/home/home.css
+++ b/src/public/styles/home/home.css
@@ -64,6 +64,11 @@
 
 .song-dategenre p {
     color: var(--white);
+    font-size: 0.8rem;
+}
+
+.song-dategenre .genre {
+    text-align: right;
 }
 
 .right-side {
